Did alot. needs refinement on MainActivity.java GameMenu not done. calculator next

--- a/app/src/main/res/layout/game_menu.xml
+++ b/app/src/main/res/layout/game_menu.xml
@@ -5,10 +5,10 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".GameMenu">
 
     <ListView
-        android:id="@+id/ListView1"
+        android:id="@+id/ListView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
