add button calculate

--- a/app/src/main/res/layout/calculator_menu.xml
+++ b/app/src/main/res/layout/calculator_menu.xml
@@ -218,6 +218,12 @@
                         android:layout_height="wrap_content"
                         android:text="/" />
 
+                    <Button
+                        android:id="@+id/Calculate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Calcu" />
+
                 </TableRow>
 
             </TableLayout>
