--- a/app/src/main/res/layout/edit_stat_popup_menu.xml
+++ b/app/src/main/res/layout/edit_stat_popup_menu.xml
@@ -33,10 +33,17 @@
         android:id="@+id/btnEditStat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:text="Create"
+        app:layout_constraintBottom_toTopOf="@+id/btnEditFormula"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnEditFormula"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Edit Formula"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
